# realtimeStt-onnx

./: DEVELOPMENT.md  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
examples/: basic_transcription.py  custom_vad.py  multi_source_transcription.py  realtime_transcription.py  speaker_transcription.py  test_models.py  with_callbacks.py
realtimestt_onnx/: __init__.py  audio_buffer.py  audio_devices.py  audio_recorder.py  diagnose_wasapi.py  multi_source_recorder.py  onnx_engine.py  vad_handler.py
tests/: test_audio_buffer.py
